--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,13 @@
     <version>5.2.5</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.9.0</version>
+    <scope>compile</scope>
+</dependency>
+
   </dependencies>
 </project>
